@@ -1,6 +1,7 @@
 3.4.4
 - Added:
   * Imagick::optimizePlusImageLayers() : Imagick
+  * Imagick::optimizeImageTransparency() : bool
 - Fixes:
   * Imagick::getRegistry() now throws an exception if the key does not exist, rather than terminating the program.
 
